style.css
* {
    margin: 0;
    padding: 0;
    border: 0;
}

.banner {
    background-image: url(banner.1.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
    position: relative;
    top: 0;
    bottom:0;
    height: 400px;
    color: #f6edd3;
}

a {
    text-decoration: none;
    
}

.banner a {
    color: #f6edd3
}

.banner h3, .banner ul li {
    float: left;
    margin-top: 20px;
}

.banner h3 {
    padding-left: 15px;
}

.banner ul {
    float: right;
}

.banner ul li {
    list-style: none;
    padding-right: 15px;
}

.banner h1 {
    text-align: center;
    padding-top: 100px;
    
}

.banner span {
    color: #588E95;
    font-size: 2em;
}


/*Journey section*/

.journey {
    display: flex;
    width: 100%;
}

.journey-left {
    flex: 1;
}

.journey-middle {
    flex: 2;
    background-color: #5D97D7;
    
}
.journey-right {
    flex: 1;
}

.journey img {
    width: 100%;
    height: 100%
}

ul {
    list-style-type: none;
}

.qoutes {
    padding: 25px;
}

.qoutes, .journey h2 {
    text-align: center;
    line-height: 1.2em;
    padding: 4px 4px px 4px;
        
}


/*About Section*/

.about-container {
    width: 80%;
    margin: 0 auto;
    margin-top: 10%;
    margin-bottom: 10%;
}

.about-img {
    width: 35%;
    float: left;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    border-radius: 2%;
    
}

:after {
    clear:both;
    display: block;
    content: "";
}

.about-title {
    font-size: 3em;
    color: #132D4E;
    position: relative;
    top: 25px;
    left: -50px;
}

.about-h2 {
    margin-bottom: 8%;
    margin-top: 5px;
    font-size: 1.6em;
}

/*Work Section*/

.work-container h1 {
    text-align: center;
    font-size: 2em;
    color: #132D4E;
    margin-bottom: 30px;
}

.work-item img {
    
    opacity: .5;
    display: block;
    margin: auto;
    width:60%;
    
}

.work-item {
    width: 90%;
    margin: 0 auto;
    
}

.work-title {
    position: relative;
    top: -200px;
    left: 20px;
}

.work-link {
    border: 1px solid black;
    padding: 10px;
    position: relative;
    display: block;
    width: 130px;
    top: -190px;
    left: 30px;
    
    z-index: 2;
    text-align: center;
}

/*End Work Section*/

/*Contact me*/

/*End Contact me*/

/*Footer*/

.social-icons img {
    width: 20px;
}

